# 2048-Game

./: .gitignore  2048Game.sln  CMakeLists.txt  LICENCE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ccpp.yml
2048Game/: 2048Game.vcxproj  2048Game.vcxproj.filters  GameGrid.cpp  GameGrid.h  Main.cpp  Number.cpp
2048Game/include/: GameGrid.h  Number.h
2048Game/mocks/: GameGridMock.cpp  GameGridMock.h
2048Game/src/: GameGrid.cpp  GameGrid.h  Grid.cpp  Grid.h  Number.cpp  main.cpp
2048Game/tests/: GameGridTest.cpp  GameGridTest.h  unitTests.cpp
