cmake_minimum_required(VERSION 3.10)

project(2048 VERSION 1.0)

set(ROOT_PATH ${CMAKE_HOME_DIRECTORY})
set(CODE_PATH ${ROOT_PATH}/2048Game/)
set(TEST_PATH ${CODE_PATH}tests/)
set(MOCK_PATH ${CODE_PATH}mocks/)
set(SOURCE_PATH ${CODE_PATH}src/)
set(BIN_PATH ${ROOT_PATH}/bin/)
set(EXEC_NAME 2048_game)
set(EXEC_TESTS_NAME tests_2048_game)

set(EXECUTABLE_OUTPUT_PATH ${BIN_PATH})
set(GRID ${SOURCE_PATH}Grid.cpp)
file(GLOB _SOURCE_FILES ${SOURCE_PATH}*.cpp)
file(GLOB TEST_FILES ${TEST_PATH}*.cpp)
file(GLOB MOCK_FILES ${MOCK_PATH}*.cpp)
set(TEST_FILES ${TEST_FILES} ${MOCK_FILES} ${GRID})
set(GAME_FILES ${_SOURCE_FILES})
add_executable(${EXEC_NAME} ${GAME_FILES})
add_executable(${EXEC_TESTS_NAME} ${TEST_FILES})
target_link_libraries(${EXEC_TESTS_NAME} cppunit)